<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_jupiter"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingBottom="16dp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/jupiter_1"
                android:scaleType="centerCrop"
                android:contentDescription="Imagen de Júpiter" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos_generales"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masa"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diametro_jupiter"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distancia_sol_jupiter"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duracion_dia_jupiter"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duracion_ano_jupiter"
                android:textSize="16sp"
                android:textColor="@color/black" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/jupiter_2"
                android:scaleType="centerCrop"
                android:contentDescription="Imagen de la Gran Mancha Roja"
                android:layout_marginTop="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atmosfera_jupiter"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_atmosfera_jupiter"
                android:textColor="@color/black" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/jupiter_3"
                android:scaleType="centerCrop"
                android:contentDescription="Imagen de las lunas de Júpiter"
                android:layout_marginTop="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunas_jupiter"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_lunas_jupiter"
                android:textSize="16sp"
                android:textColor="@color/black" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/jupiter_4"
                android:scaleType="centerCrop"
                android:contentDescription="Imagen del campo magnético de Júpiter"
                android:layout_marginTop="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campo_magnetico_jupiter"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_campo_magnetico_jupiter"
                android:textSize="16sp"
                android:textColor="@color/black" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_login" />

        <Button
            android:id="@+id/listButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_lista" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_salir" />

    </LinearLayout>

</RelativeLayout>



