<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextNewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nuevo_usuario"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nueva_contrasena"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:inputType="textPostalAddress"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextNationality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nacionalidad"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_telefono"
            android:inputType="phone"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar"/>

        <ImageView
            android:id="@+id/imageViewTennis"
            android:layout_width="347dp"
            android:layout_height="265dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/img_5" />

    </LinearLayout>
</ScrollView>
