<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#f2f2f2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infografia_urano"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:paddingBottom="16dp" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/urano_1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/imagen_urano" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datos_generales_urano"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masa_urano"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diametro_urano"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distancia_sol_urano"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duracion_dia_urano"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duracion_ano_urano"
                android:textSize="16sp"
                android:textColor="@color/black" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/urano_2"
                android:scaleType="centerCrop"
                android:layout_marginTop="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anillos_urano"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_anillos_urano"
                android:textSize="16sp"
                android:textColor="@color/black" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/urano_3"
                android:scaleType="centerCrop"
                android:layout_marginTop="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lunas_urano"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_lunas_urano"
                android:textSize="16sp"
                android:textColor="@color/black" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/urano_4"
                android:scaleType="centerCrop"
                android:layout_marginTop="16dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campo_magnetico_urano"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_campo_magnetico_urano"
                android:textSize="16sp"
                android:textColor="@color/black" />



        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login" />

        <Button
            android:id="@+id/listButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lista" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Salir" />

    </LinearLayout>

</RelativeLayout>

